--- a/Message.css
+++ b/Message.css
@@ -3,7 +3,7 @@
 
 body {
 	font-family: 'Indie Flower', cursive !important;
-  background: #FDE3A7; /*CAPE HONEY*/
+	background: #fbd67e; /*CAPE HONEY*/
 	margin: 0px;
 	padding: 0px;
 }
@@ -18,8 +18,8 @@ h4 {
 	font-family: 'Amatic SC', cursive !important;
 }
 
-.color1{color:#1BBC9B}/*MOUNTAIN MEADOW*/
-.color2{color:#C0392B/*TALL POPPY*/}
+.color1{color:#1BBC9B; transform: rotate(-5deg);}/*MOUNTAIN MEADOW*/
+.color2{color:#C0392B; transform: rotate(-5deg);/*TALL POPPY*/}
 
 
 .card {
@@ -37,7 +37,7 @@ h4 {
 }
 
 .card:hover {
-	transform: translate(-50%,-50%) perspective(2000px) rotate(15deg) scale(1.2);
+	transform: translate(-50%,-50%) perspective(2000px) rotate(15deg) scale(1.4);
 	box-shadow: inset 20px 0 50px rgba(0,0,0,.5), 0 10px 100px rgba(0,0,0,.5);
 }
 
@@ -102,22 +102,179 @@ h4 {
 	top: 0;
 	left: 0;
 	box-sizing: border-box;
-	padding: 0 0 0 10px;
+	padding: 0 0 0 20px;
 	z-index: -1;
-	margin-top: 70px;
+	margin-top: 35px;
 }
 
 .card .details p {
 	font-size: 15px;
-	line-height: 5px;
+	line-height: 21px;
 	transform: rotate(-10deg);
-	padding: 0 0 0 20px;
+	padding: 0 0 0 10px;
+	margin-top: 40px;
 }
 
 .card .details h4 {
 	text-align: center;
+	margin-top: 10px;
+}
+
+.text-left-align{
+	margin-left: 0px;
+	text-align: left;
 }
 
 .text-right {
+	
 	text-align: right;
+	margin-right: 10px;
 }
+
+.front-img{
+	border-radius: 2%;
+}
+.button {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.2em;
+    flex: 1 1 auto;
+    margin-top: 45vh;
+    color: #333;
+    left: 155vh;
+    padding: 20px;
+    border: 3px solid #fff;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    overflow: hidden;
+    text-shadow: 4px 6px 6px rgba(0,0,0,0.18);
+    transition: 0.3s;
+    -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    animation-delay: 2s;
+}
+.button:after {
+    position: absolute;
+    transition: 0.3s;
+    content: '';
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    height: 3px;
+    background: #f7f7f7;
+}
+.button:nth-of-type(5):after {
+    height: 120%;
+    left: -10%;
+    transform: skewX(15deg);
+    z-index: -1;
+}
+.button:hover {
+    cursor: pointer;
+    background: #f7f7f7;
+    color: #000;
+    text-shadow: none;
+    
+}
+.button:hover:after {
+    width: 100%;
+    left: 0;
+}
+.button:hover:nth-of-type(5) {
+    color: #0f0f0f;
+}
+.button:hover:nth-of-type(5):after {
+    left: -10%;
+    width: 120%;
+}
+
+@-webkit-keyframes tracking-in-expand {
+    0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes tracking-in-expand {
+    0% {
+      letter-spacing: -0.5em;
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+@-webkit-keyframes jello-horizontal {
+	0% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+	30% {
+	  -webkit-transform: scale3d(1.25, 0.75, 1);
+			  transform: scale3d(1.25, 0.75, 1);
+	}
+	40% {
+	  -webkit-transform: scale3d(0.75, 1.25, 1);
+			  transform: scale3d(0.75, 1.25, 1);
+	}
+	50% {
+	  -webkit-transform: scale3d(1.15, 0.85, 1);
+			  transform: scale3d(1.15, 0.85, 1);
+	}
+	65% {
+	  -webkit-transform: scale3d(0.95, 1.05, 1);
+			  transform: scale3d(0.95, 1.05, 1);
+	}
+	75% {
+	  -webkit-transform: scale3d(1.05, 0.95, 1);
+			  transform: scale3d(1.05, 0.95, 1);
+	}
+	100% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+  }
+  @keyframes jello-horizontal {
+	0% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+	30% {
+	  -webkit-transform: scale3d(1.25, 0.75, 1);
+			  transform: scale3d(1.25, 0.75, 1);
+	}
+	40% {
+	  -webkit-transform: scale3d(0.75, 1.25, 1);
+			  transform: scale3d(0.75, 1.25, 1);
+	}
+	50% {
+	  -webkit-transform: scale3d(1.15, 0.85, 1);
+			  transform: scale3d(1.15, 0.85, 1);
+	}
+	65% {
+	  -webkit-transform: scale3d(0.95, 1.05, 1);
+			  transform: scale3d(0.95, 1.05, 1);
+	}
+	75% {
+	  -webkit-transform: scale3d(1.05, 0.95, 1);
+			  transform: scale3d(1.05, 0.95, 1);
+	}
+	100% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+  }
+  
+  a{
+	  text-decoration: none;
+	  color: inherit;
+  }
