--- a/Your-stuff.css
+++ b/Your-stuff.css
@@ -274,6 +274,17 @@
   opacity: 1;
   filter: alpha(opacity=100);
 }
+
+.material-card.mc-active .gaygay{
+  overflow-y: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
+
+.material-card.mc-active .gaygay::-webkit-scrollbar{
+  display: none;
+}
+
 @media screen and (max-width: 767px) {
   .material-card.mc-active .mc-description {
     position: relative;
