--- a/Your-stuff.css
+++ b/Your-stuff.css
@@ -243,7 +243,7 @@
   transition: all 0.3s;
 }
 .page-header{
-  text-align: left;
+  text-align: center;
 }
 .material-card.mc-active .img-container {
   -webkit-border-radius: 50%;
@@ -1292,10 +1292,10 @@ h3 {
   font-family: 'Lato', sans-serif;
   font-size: 1.5em;
   flex: 1 1 auto;
-  margin-top: -5%;
+  margin-bottom: 10%;
   color: #333;
-  background: transparent;
-  left: 150vh;
+  background: #e0eaf1;
+  margin-right: 19%;
   padding: 20px;
   border: 3px solid #fff;
   text-align: center;
@@ -1307,6 +1307,7 @@ h3 {
   -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation-delay: 3s;
+  width: 61%;
 }
 .button:after {
   position: absolute;
@@ -1316,12 +1317,14 @@ h3 {
   left: 50%;
   bottom: 0;
   height: 3px;
+  margin-bottom: 10%;
 }
 .button:nth-of-type(5):after {
   height: 120%;
   left: -10%;
   transform: skewX(15deg);
   z-index: -1;
+  margin-bottom: 10%;
 }
 .button:hover {
   cursor: pointer;
