--- a/page-5.css
+++ b/page-5.css
@@ -6,6 +6,8 @@ body {
   height: 100%;
   margin:0;
   padding: 0;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
 }
 .container {
   height: 70vh;
