--- a/Your-stuff.css
+++ b/Your-stuff.css
@@ -1295,7 +1295,7 @@ h3 {
   margin-bottom: 10%;
   color: #333;
   background: #e0eaf1;
-  margin-right: 19%;
+  margin-left: 20%;
   padding: 20px;
   border: 3px solid #fff;
   text-align: center;
@@ -1307,7 +1307,7 @@ h3 {
   -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation-delay: 3s;
-  width: 61%;
+  width: 60%;
 }
 .button:after {
   position: absolute;
